# tauri-vue-primevue-tailwind-template

./: README.md  components.d.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/assets/: style.css
src/components/commons/: DarkModeBtn.vue
src/configs/: customPrimeTheme.ts  primevueConfigs.ts
src/router/: index.ts
src/types/: global.d.ts
